--- a/slides/aws-reinvent-recap-2020/index.html
+++ b/slides/aws-reinvent-recap-2020/index.html
@@ -25,21 +25,21 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
 
     <!-- CSS Base -->
-    <link rel="stylesheet" type='text/css' media='all' href="../slides/static/css/webslides.css">
+    <link rel="stylesheet" type='text/css' media='all' href="../static/css/webslides.css">
 
     <!-- Optional - CSS SVG Icons (Font Awesome) -->
-    <link rel="stylesheet" type="text/css" media="all" href="../slides/static/css/svg-icons.css">
+    <link rel="stylesheet" type="text/css" media="all" href="../static/css/svg-icons.css">
 
     <!-- SOCIAL CARDS (ADD YOUR INFO) -->
 
     <!-- FAVICONS -->
-    <link rel="shortcut icon" sizes="16x16" href="../slides/static/images/favicons/favicon.png">
-    <link rel="shortcut icon" sizes="32x32" href="../slides/static/images/favicons/favicon-32.png">
-    <link rel="apple-touch-icon icon" sizes="76x76" href="../slides/static/images/favicons/favicon-76.png">
-    <link rel="apple-touch-icon icon" sizes="120x120" href="../slides/static/images/favicons/favicon-120.png">
-    <link rel="apple-touch-icon icon" sizes="152x152" href="../slides/static/images/favicons/favicon-152.png">
-    <link rel="apple-touch-icon icon" sizes="180x180" href="../slides/static/images/favicons/favicon-180.png">
-    <link rel="apple-touch-icon icon" sizes="192x192" href="../slides/static/images/favicons/favicon-192.png">
+    <link rel="shortcut icon" sizes="16x16" href="../static/images/favicons/favicon.png">
+    <link rel="shortcut icon" sizes="32x32" href="../static/images/favicons/favicon-32.png">
+    <link rel="apple-touch-icon icon" sizes="76x76" href="../static/images/favicons/favicon-76.png">
+    <link rel="apple-touch-icon icon" sizes="120x120" href="../static/images/favicons/favicon-120.png">
+    <link rel="apple-touch-icon icon" sizes="152x152" href="../static/images/favicons/favicon-152.png">
+    <link rel="apple-touch-icon icon" sizes="180x180" href="../static/images/favicons/favicon-180.png">
+    <link rel="apple-touch-icon icon" sizes="192x192" href="../static/images/favicons/favicon-192.png">
 
     <!-- Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -48,7 +48,7 @@
   <body>
    <!--  <header role="banner">
       <nav role="navigation">
-        <p class="logo"><a href="../slides/index.html" title="WebSlides">WebSlides</a></p>
+        <p class="logo"><a href="../index.html" title="WebSlides">WebSlides</a></p>
         <ul>
           <li class="github">
             <a rel="external" href="https://github.com/webslides/webslides" title="Github">
@@ -378,7 +378,7 @@
         <section class="bg-apple">
           <div class="wrap">
             <div class="card-50">
-              <figure><img class="aligncenter" src="../slides/static/images/iphone.png" alt="iPhone"></figure>
+              <figure><img class="aligncenter" src="../static/images/iphone.png" alt="iPhone"></figure>
               <div class="flex-content">
                 <h2>
                   <svg class="fa-apple">
@@ -430,7 +430,7 @@
               <!-- end .column-->
               <div class="column">
                 <figure>
-                  <img src="../slides/static/images/iphone.png" alt="iPhone">
+                  <img src="../static/images/iphone.png" alt="iPhone">
                 </figure>
               </div>
               <!-- end figure-->
@@ -475,7 +475,7 @@
               </div>
               <!-- end .flex-content-->
               <figure>
-                <img class="aligncenter" src="../slides/static/images/iphone.png" alt="iPhone 6">
+                <img class="aligncenter" src="../static/images/iphone.png" alt="iPhone 6">
               </figure>
             </div>
           </div>
@@ -493,7 +493,7 @@
           <!-- .end .wrap -->
         </section>
         <section class="bg-apple">
-          <span class="background-left-bottom" style="background-image:url('../slides/static/images/iphone-hand.png')"></span>
+          <span class="background-left-bottom" style="background-image:url('../static/images/iphone-hand.png')"></span>
           <div class="wrap">
             <div class="content-right">
               <h2>
@@ -513,7 +513,7 @@
           <!-- .end .wrap -->
         </section>
         <section class="bg-apple">
-          <span class="background-right-bottom" style="background-image:url('../slides/static/images/iphone-hand.png')"></span>
+          <span class="background-right-bottom" style="background-image:url('../static/images/iphone-hand.png')"></span>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap">
             <div class="content-left">
@@ -535,7 +535,7 @@
           <!-- .end .wrap -->
         </section>
         <section class="bg-apple">
-          <span class="background-left-bottom" style="background-image:url('../slides/static/images/iphone-hand.png')"></span>
+          <span class="background-left-bottom" style="background-image:url('../static/images/iphone-hand.png')"></span>
           <div class="wrap">
             <div class="content-right">
               <ul class="flexblock specs">
@@ -572,7 +572,7 @@
           <!-- .end .wrap -->
         </section>
         <section class="bg-apple">
-          <span class="background-right-bottom" style="background-image:url('../slides/static/images/iphone-hand.png')"></span>
+          <span class="background-right-bottom" style="background-image:url('../static/images/iphone-hand.png')"></span>
           <div class="wrap">
             <div class="content-left">
               <h1>
@@ -598,7 +598,7 @@
               <p>I'm an optimist in the sense that I believe humans are noble and honorable, and some of them are really smart. I have a very optimistic view of individuals.</p>
               <p>
                 <cite>
-                  <!-- <img class="avatar-56" src="../slides/static/images/avatar.jpg" alt="Avatar"> --> Steve Jobs.
+                  <!-- <img class="avatar-56" src="../static/images/avatar.jpg" alt="Avatar"> --> Steve Jobs.
                 </cite>
               </p>
             </blockquote>
@@ -873,14 +873,14 @@
     <!--main-->
 
     <!-- Required -->
-    <script src="../slides/static/js/webslides.js"></script>
+    <script src="../static/js/webslides.js"></script>
 
     <script>
       window.ws = new WebSlides();
     </script>
 
     <!-- OPTIONAL - svg-icons.js (fontastic.me - Font Awesome as svg icons) -->
-    <script defer src="../slides/static/js/svg-icons.js"></script>
+    <script defer src="../static/js/svg-icons.js"></script>
 
   </body>
 </html>
