--- a/slides/aws-reinvent-recap-2020/index.html
+++ b/slides/aws-reinvent-recap-2020/index.html
@@ -90,11 +90,49 @@
           <!--.wrap = container (width: 90%) -->
           <div class="wrap size-50">
             <h1>re:Invent re:Cap 2020</h1>
-            <p class="text-intro">So many exciting announcments</p>
+            <p class="text-intro">Where does one even begin?</p>
             <p>
+              <li>Airflow (and differences vs Step Functions)</li>
+              <li>MacOS in AWS</li>
+              <li>Sagemaker key features (to me)</li>
               <li>Lambda Billing Granularity​</li>
               <li>AWS Fault Injection Simulator (coming in 2021)</li>
             </p>
+            <!-- <p><code>.bg-apple</code></p> -->
+          </div>
+          <!-- .end .wrap -->
+        </section>
+        <section class="bg-apple">
+          <!--.wrap = container (width: 90%) -->
+          <div class="wrap size-50">
+            <h1>Apache Airflow</h1>
+            <li>Cost</li>
+            <li>Maturity</li>
+            <li>Functionality<li>
+            <!-- <p><code>.bg-apple</code></p> -->
+          </div>
+          <!-- .end .wrap -->
+        </section>
+        <section class="bg-apple">
+          <!--.wrap = container (width: 90%) -->
+          <div class="wrap size-50">
+            <h1>MacOS in AWS</h1>
+            <li>What else is there to say?</li>
+            <li>Finally!</li>
+            <!-- <p><code>.bg-apple</code></p> -->
+          </div>
+          <!-- .end .wrap -->
+        </section>
+        <section class="bg-apple">
+          <!--.wrap = container (width: 90%) -->
+          <div class="wrap size-50">
+            <h1>Sagemaker Features</h1>
+            <li>Jumpstart</li>
+            <li>Pipelines</li>
+            <li>Edge Manager</li>
+            <li>Debugger</li>
+            <li>Clarify</li>
+            <li>Data Wrangler</li>
             <!-- <p><code>.bg-apple</code></p> -->
           </div>
           <!-- .end .wrap -->
@@ -103,6 +141,16 @@
           <!--.wrap = container (width: 90%) -->
           <div class="wrap">
             <h2>Lambda Billing Granularity​</h2>
+          </div>
+          <!-- .end .wrap -->
+        </section>
+        <section class="bg-apple">
+          <!--.wrap = container (width: 90%) -->
+          <div class="wrap size-50">
+            <h1>What does this mean?​</h1>
+            <li>If you are outside of the free tier of Lambda, your bill automatic becomes cheaper</li>
+            <li>The percent change on your function will vary based upon how much Lambda was previously rounding up</li>
+            <!-- <p><code>.bg-apple</code></p> -->
           </div>
           <!-- .end .wrap -->
         </section>
@@ -230,6 +278,17 @@
           <!--.wrap = container (width: 90%) -->
           <div class="wrap">
             <img src="https://d1.awsstatic.com/reInvent/re20-pdp-tier1/Valkyrie/AWS-Fault-Injection-Simulator_HIW-Diagram@2X.9b92203197b914aed8e1eae074c0538e1309d3aa.png" alt="aws fis diagram">
+          </div>
+          <!-- .end .wrap -->
+        </section>
+        <section class="bg-apple">
+          <!--.wrap = container (width: 90%) -->
+          <div class="wrap size-50">
+            <h1>Wrap up</h1>
+            <li>Don’t reinvent the wheel</li>
+            <li>Evaluate the trade-offs</li>
+            <li>Identify the business value</li>
+            <!-- <p><code>.bg-apple</code></p> -->
           </div>
           <!-- .end .wrap -->
         </section>
