--- a/slides/aws-reinvent-recap-2020/index.html
+++ b/slides/aws-reinvent-recap-2020/index.html
@@ -108,7 +108,7 @@
             <h1>Apache Airflow</h1>
             <li>Cost</li>
             <li>Maturity</li>
-            <li>Functionality<li>
+            <li>Functionality</li>
             <!-- <p><code>.bg-apple</code></p> -->
           </div>
           <!-- .end .wrap -->
@@ -141,16 +141,6 @@
           <!--.wrap = container (width: 90%) -->
           <div class="wrap">
             <h2>Lambda Billing Granularity​</h2>
-          </div>
-          <!-- .end .wrap -->
-        </section>
-        <section class="bg-apple">
-          <!--.wrap = container (width: 90%) -->
-          <div class="wrap size-50">
-            <h1>What does this mean?​</h1>
-            <li>If you are outside of the free tier of Lambda, your bill automatic becomes cheaper</li>
-            <li>The percent change on your function will vary based upon how much Lambda was previously rounding up</li>
-            <!-- <p><code>.bg-apple</code></p> -->
           </div>
           <!-- .end .wrap -->
         </section>
