--- a/slides/aws-reinvent-recap-2020/index.html
+++ b/slides/aws-reinvent-recap-2020/index.html
@@ -95,7 +95,7 @@
               <li>Airflow (and differences vs Step Functions)</li>
               <li>MacOS in AWS</li>
               <li>Sagemaker key features (to me)</li>
-              <li>Lambda Billing Granularity​</li>
+              <li>Lambda Billing Granularity</li>
               <li>AWS Fault Injection Simulator (coming in 2021)</li>
             </p>
             <!-- <p><code>.bg-apple</code></p> -->
